--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ add_definitions(-std=c++11 -DWSL_ENABLED)
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-set(sources src/main.cpp src/trajectory_generator.cpp src/helpers.cpp)
+set(sources src/main.cpp src/trajectory_generator.cpp src/helpers.cpp src/predictor.cpp src/behaviour_planner.cpp)
 
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
